--- a/location.html
+++ b/location.html
@@ -4,7 +4,7 @@
 	<!-- 
 		Final Project CMIS 410
 		Author: Eli Southard
-		Date: 11/12/23
+		Date: 11/20/23
 		
 		These web pages are for educational purposes only, all content should be considered fictional. 
 	
@@ -40,18 +40,19 @@
 	 
 <article id = "main"> 
 
-<h2>About Us</h2>
-	<p>Southard's Mini Golf will first open it's doors in 2024! We are opening this course in hopes of bringing joy to families in the sorrounding areas. We want families to be able to have afforable fun and that is our mission we plan to accomplish. We thought minuture golf was the perfect fit for this community. Everyone enjoys a little mini golf right? Whether or not it gets a little competitive!</p>
+<h2>Location</h2>
+	<p>We want to eventually have multiple locations in Nebraska but for now we will start with one.</p>
 
-<h3>Indoor and Outdoor Courses</h3>
-	<p><img src = "images/indoorminigolf.jpg" alt = "Indoor mini golf course" class="indoor" />
-	<img src = "images/outdoorminigolf.jpg" alt = "Outdoor mini golf course" class="outdoor" />
+<h3>Southard's Mini Golf (Lincoln)</h3>
+	<p><img src = "images/lincolnmap.jpg" alt = "Lincoln Map" class="map" />
 	</p>
 
-<h3>Master Your Game</h3>
-	<p><iframe width="400" height="223" src="https://www.youtube.com/embed/CrbpKsDTSRU?si=MUs3mDu4htsoHlrG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<h3>Welcome to Glow Putt Putt</h3>
+	<p> An indoor minature golf course that involves a blacklight to make everything including your clothes glow. Your ball and club will glow bright enough, no need to worry. Every hole is different and will test your skills.
 	</p>
-
+<h4>Welcome to Outdoor Oasis</h4>
+	<p> An outdoor minature golf course that involves many different mini waterfalls and streams. Its like golfing on a beach. Every hole is different and will test your skills.
+	</p>
 </article> <!-- end main -->
 
 <aside> 
