--- a/location.html
+++ b/location.html
@@ -23,7 +23,9 @@
 
 <header> 
 
+<a href="index.html"><img src="images/golfballsillyface.png" alt="Golf ball silly face" class="golfballsilly"/></a>
 <a href="index.html"><img src="images/southardslogo.png" alt="Southard's Mini Golf Logo"/></a>
+ <a href="index.html"><img src="images/golfballsillyface.png" alt="Golf ball silly face" class="golfballsilly"/></a>
 
 </header> 
 
@@ -64,8 +66,8 @@
 	<p>Wednesday: 10 a.m. - 9 p.m.</p>
 	<p>Thursday: 10 a.m. - 9 p.m.</p>
 	<p>Friday: 10 a.m. - 9 p.m.</p>
-	<p>Saturday: 10 a.m. - 12 a.m.</p>
-	<p>Sunday: 12 p.m - 5 p.m.</p>
+	<p>Saturday: 10 a.m. - 9 p.m.</p>
+	<p>Sunday: 10 a.m. - 9 p.m.</p>
 
 <figure>
   <img src = "images/colorfulgolfballs.jpg" alt = "Coloful Golf balls"  />
