--- a/pricing.html
+++ b/pricing.html
@@ -4,7 +4,7 @@
 	<!-- 
 		Final Project CMIS 410
 		Author: Eli Southard
-		Date: 11/12/23
+		Date: 11/20/23
 		
 		These web pages are for educational purposes only, all content should be considered fictional. 
 	
@@ -22,10 +22,10 @@
 <div id = "container"> 
 
 <header> 
- <a href="index.html"><img src="images/golfballsillyface.png" alt="Golf ball silly face" class="golfballsilly"/></a>
+
+<a href="index.html"><img src="images/golfballsillyface.png" alt="Golf ball silly face" class="golfballsilly"/></a>
 <a href="index.html"><img src="images/southardslogo.png" alt="Southard's Mini Golf Logo"/></a>
  <a href="index.html"><img src="images/golfballsillyface.png" alt="Golf ball silly face" class="golfballsilly"/></a>
-
 
 </header> 
 
@@ -42,18 +42,54 @@
 	 
 <article id = "main"> 
 
-<h2>About Us</h2>
-	<p>Southard's Mini Golf will first open it's doors in 2024! We are opening this course in hopes of bringing joy to families in the sorrounding areas. We want families to be able to have afforable fun and that is our mission we plan to accomplish. We thought minuture golf was the perfect fit for this community. Everyone enjoys a little mini golf right? Whether or not it gets a little competitive!</p>
-
-<h3>Indoor and Outdoor Courses</h3>
-	<p><img src = "images/indoorminigolf.jpg" alt = "Indoor mini golf course" class="indoor" />
-	<img src = "images/outdoorminigolf.jpg" alt = "Outdoor mini golf course" class="outdoor" />
+<h2>Pricing</h2>
+	<p>Here at Southard's Mini Golf we strive for a fun family environment, that is also affordable for all. Prices may vary depending on time of day and age of participants. We are the most affordable place in town! </p>
+	<p> All prices include golf club and golf ball. This is a flat rate for 18 holes.
 	</p>
-
-<h3>Master Your Game</h3>
-	<p><iframe width="400" height="223" src="https://www.youtube.com/embed/CrbpKsDTSRU?si=MUs3mDu4htsoHlrG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-	</p>
-
+	<h3>Adult Pricing</h3>
+	<table class="pricing"> 
+	    <thead>
+			<tr>
+				<th>Time</th>
+				<th>Mon - Sun</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<th>10 A.M.- 12 P.M.</th>
+				<td>$10.75 ea</td>
+			</tr>
+			<tr>
+				<th>12 P.M. - 4 P.M.</th>
+				<td>$11.75 ea</td>
+			</tr>
+			<tr> 
+				<th>4 P.M. - 9 P.M.</th>
+					<td>$12.75 ea</td>
+			</tr>
+		</tbody> 
+<h4> Child Pricing (3-12 years old)</h4>
+	 <table class="childpricing"> 
+	    <thead>
+			<tr>
+				<th>Time</th>
+				<th>Mon - Sun</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<th>10 A.M.- 12 P.M.</th>
+				<td>$5.75 ea</td>
+			</tr>
+			<tr>
+				<th>12 P.M. - 4 P.M.</th>
+				<td>$6.75 ea</td>
+			</tr>
+			<tr> 
+				<th>4 P.M. - 9 P.M.</th>
+					<td>$7.75 ea</td>
+			</tr>
+		</tbody>
 </article> <!-- end main -->
 
 <aside> 
@@ -65,7 +101,7 @@
 	<p>Wednesday: 10 a.m. - 9 p.m.</p>
 	<p>Thursday: 10 a.m. - 9 p.m.</p>
 	<p>Friday: 10 a.m. - 9 p.m.</p>
-	<p>Saturday: 10 a.m. - 9 p.m.</p>
+	<p>Saturday: 10 a.m. - 9 p.m. </p>
 	<p>Sunday: 10 a.m. - 9 p.m.</p>
 
 <figure>
@@ -76,10 +112,10 @@
   </figcaption> 
 </figure>
 
-</aside>   
+</aside> 
+ 
 
 <footer> 
-
 	<p>Southard's Mini Golf<br />
 	123 Platte Road &bull; Lincoln, NE 12345<br />
 	<a href = "https://facebook.com" target="_blank">Facebook</a> |<a href = "tel:+12334449989">(233) 444-9989</a> | <a href = "mailto:minigolf@southards.com">Email Us</a></p>
