--- a/pricing.html
+++ b/pricing.html
@@ -68,6 +68,7 @@
 					<td>$12.75 ea</td>
 			</tr>
 		</tbody> 
+		</table>
 <h4> Child Pricing (3-12 years old)</h4>
 	 <table class="childpricing"> 
 	    <thead>
@@ -90,6 +91,7 @@
 					<td>$7.75 ea</td>
 			</tr>
 		</tbody>
+		</table>
 </article> <!-- end main -->
 
 <aside> 
