--- a/reviews.html
+++ b/reviews.html
@@ -58,8 +58,8 @@
 			
 		<div class="formRow">
 			<label for="city">City</label>
-			<input name="custCity" id="city" type="text" 
-		</div>	
+			<input name="custCity" id="city" type="text" />
+		</div>
 			
 		<div class="formRow">
 			<label for="state">State</label>
