--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	</p>
 
 <h3>Master Your Game</h3>
-	<p><iframe width="400" height="223" src="https://www.youtube.com/embed/CrbpKsDTSRU?si=MUs3mDu4htsoHlrG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+	<p><iframe width="400" height="223" src="https://www.youtube.com/embed/CrbpKsDTSRU?si=MUs3mDu4htsoHlrG" title="YouTube video player"; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 	</p>
 
 </article> <!-- end main -->
